(lang dune 3.19)

(name playground)

(generate_opam_files true)

(source
 (github tgillus/ocaml-playground))

(authors "Tramaine L. Gillus")

(maintainers "Tramaine L. Gillus")

(documentation https://github.com/tgillus/ocaml-playground/blob/main/README.md)

(package
 (name playground)
 (synopsis "A project to explore OCaml.")
 (description "This project serves as a playground for exploring this OCaml programming language.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
